[metadata]
name = heursolver
version = 0.0.1
author = Yifei Wang
author_email = ywang13@renci.org
description = Compute shortest path using solver and heuristic method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yifei666/Heuristic-Solver-Benchmark.git
install_requires = ['numpy', 'networkx', 'matplotlib', 'ortools']
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
